Prevent overflow of planet-content

--- a/inyoka_theme_default/static/style/inyoka/planet.less
+++ b/inyoka_theme_default/static/style/inyoka/planet.less
@@ -76,5 +76,19 @@
         color: inherit;
       }
     }
+
+    img {
+      max-width: 100% !important;
+      
+      /* `!important` needed as width and height are sometimes inline
+          defined (→ wrong form-factor if scaled) */
+      height: auto !important;
+      width: auto !important;
+    }
+
+    table {
+      table-layout: fixed;
+      width: 100%;
+    }
   }
 }
